; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/block/extr_blk-core.c_blk_get_backing_dev_info.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/block/extr_blk-core.c_blk_get_backing_dev_info.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.backing_dev_info = type { i32 }
%struct.block_device = type { i32 }
%struct.request_queue = type { %struct.backing_dev_info }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.backing_dev_info* @blk_get_backing_dev_info(%struct.block_device* %0) #0 {
  %2 = alloca %struct.block_device*, align 8
  %3 = alloca %struct.backing_dev_info*, align 8
  %4 = alloca %struct.request_queue*, align 8
  store %struct.block_device* %0, %struct.block_device** %2, align 8
  store %struct.backing_dev_info* null, %struct.backing_dev_info** %3, align 8
  %5 = load %struct.block_device*, %struct.block_device** %2, align 8
  %6 = call %struct.request_queue* @bdev_get_queue(%struct.block_device* %5)
  store %struct.request_queue* %6, %struct.request_queue** %4, align 8
  %7 = load %struct.request_queue*, %struct.request_queue** %4, align 8
  %8 = icmp ne %struct.request_queue* %7, null
  br i1 %8, label %9, label %12

9:                                                ; preds = %1
  %10 = load %struct.request_queue*, %struct.request_queue** %4, align 8
  %11 = getelementptr inbounds %struct.request_queue, %struct.request_queue* %10, i32 0, i32 0
  store %struct.backing_dev_info* %11, %struct.backing_dev_info** %3, align 8
  br label %12

12:                                               ; preds = %9, %1
  %13 = load %struct.backing_dev_info*, %struct.backing_dev_info** %3, align 8
  ret %struct.backing_dev_info* %13
}

declare dso_local %struct.request_queue* @bdev_get_queue(%struct.block_device*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
